--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.5.2",
+    "react-modern-audio-player": "^1.4.0-rc.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
