--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build and Deploy
-        run: npm run build
+      - name: Build React App
+        run: |
+          export CI=false
+          npm run build
