--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,11 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_dispatch:
+    inputs:
+      deploy_message:
+        description: "Deployment message"
+        required: false
+        default: "Deploying latest changes"
 
 permissions:
   contents: read
@@ -28,4 +33,7 @@ jobs:
       - name: Build React App
         run: |
           export CI=false
-          npm run build
+          npm run deploy -- -m "${{ github.event.inputs.deploy_message }}"
+
+      - name: Print deployment message
+        run: echo "Deployment Message: ${{ github.event.inputs.deploy_message }}"
