--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "matei.penca1@gmail.com"
+          git config --global user.name "Matei9721"
+          git remote set-url origin https://your-username:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+
       - name: Build React App
         run: |
           export CI=false
