--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,8 @@ jobs:
         run: |
           git config --global user.email "matei.penca1@gmail.com"
           git config --global user.name "Matei9721"
-          git remote set-url origin https://your-username:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+
 
       - name: Build React App
         run: |
