Updated permissions for the runner

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
         default: "Deploying latest changes"
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
