--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+# Jetbrains stuff
+/.idea
+
 # testing
 /coverage
 
@@ -21,3 +24,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+CV_Penca_Matei.pdf
+.idea/.name
